--- a/frontend/index.html
+++ b/frontend/index.html
@@ -356,10 +356,15 @@
       resultadoEl.innerHTML = `<p class="row"><strong>Analizando...</strong></p>`;
 
       try {
+        const intime = new Date().toISOString();
         const resp = await fetch(ANALIZAR_URL, {
           method: "POST",
           headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ texto_paciente: entrada })
+          body: JSON.stringify({
+            texto_paciente: entrada,
+            caso: entrada,
+            intime: intime
+          })
         });
 
         if (!resp.ok) {
