--- a/frontend/index.html
+++ b/frontend/index.html
@@ -352,11 +352,11 @@
         return;
       }
 
-      btnEl.disabled = true;
+      btnEl.disabled = true; 
       resultadoEl.innerHTML = `<p class="row"><strong>Analizando...</strong></p>`;
 
       try {
-        const intime = Date.now();
+        const intime = Date.now() / 60000;
         const resp = await fetch(ANALIZAR_URL, {
           method: "POST",
           headers: { "Content-Type": "application/json" },
